--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "https://unique-beijinho-f532cd.netlify.app/getproducts"
+  from = "/getproducts"
   to = "https://fakestoreapi.com/products"
   status = 200
   force = true
