Updated CORS config

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
+[[redirects]]
+  from = "/products/*"
+  to = "https://fakestoreapi.com"
+  status = 200
+  force = true
+  headers = {X-From = "Netlify"}
+
 [[headers]]
   for = "/*"
   [headers.values]
